--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>CoDev</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Island+Moments&family=Licorice&display=swap" rel="stylesheet">
   </head>
   <body>
   <div class="top-container">
@@ -13,6 +14,12 @@
   </div>
   <div class="middle-container">
      <p class="headings"><u>These are some of my Projects</u></p>
+     <div class="card" style="width: 20rem;">
+  <img class="card-img-top" src="images/img1.png" width="250px"alt="Card image cap">
+  <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div>
   </div>
   <div class="bottom-container">
     jnkkjuhb
