--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </div>
   <div class="bottom-container">
     <p class="contact"><u>Let's Get in Touch</u></p>
-    <form action="mailto:as09082020@gmail.com" class="feedback" action="index.html" method="post">
+    <!-- <form action="mailto:as09082020@gmail.com" class="feedback" action="index.html" method="post">
       <label for="name">Name</label><br />
       <input type="text" name="name" id="name"><br /><br />
       <label for="email">Email</label><br />
@@ -79,11 +79,13 @@
       <label for="msg">Message</label><br />
       <textarea name="Your Message" rows="4" cols="19"></textarea><br />
       <input type="submit" name="" >
-    </form>
+    </form> -->
 
-    <form>
+    <a class="BUTTON_PCR" href="mailto:as09082020@gmail.com">Contact me</a>
 
-      <table align="center" >
+    <div class="table-responsive-sm">
+
+      <table class="table"align="center" cellpadding="30">
 
         <tr>
           <td>
@@ -104,7 +106,7 @@
           </td>
         </tr>
       </table>
-
+  </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
