--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ms-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="#home">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Projects</a>
+        <a class="nav-link" href="#projects">Projects</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Resume</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact Me</a>
+        <a class="nav-link" href="#contact">Contact Me</a>
       </li>
     </ul>
   </div>
 </nav>
-  <div class="top-container">
+  <div class="top-container" id="home">
     <p class="div1top">
       Hey! I am Amrita
     </p>
@@ -43,7 +43,7 @@
     </p>
   </div>
   <div class="middle-container">
-    <section id="pricing">
+    <section id="projects">
       <p class="headings"><u>These are some of my Projects</u></p>
 
       <div class="row">
@@ -62,7 +62,7 @@
             <img src="images/drum.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Drum Kit</h5>
-              <p class="card-text">My first javascript mini project.<br />Every time you refresh you get a new result</p>
+              <p class="card-text">Used html css and javascript to build this wonderful srum kit web app.<br /></p>
               <a href="#" class="btn btn-secondary ">View</a>
             </div>
           </div>
@@ -72,7 +72,7 @@
           <img src="images/portfolio.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">My Portfolio</h5>
-            <p class="card-text">My first javascript mini project.<br />Every time you refresh you get a new result</p>
+            <p class="card-text">Used html css and bootstrap to design this. I m still working on improving it.</p>
             <a href="#" class="btn btn-secondary">View</a>
           </div>
         </div>
@@ -81,8 +81,8 @@
       <div class="card border-secondary" style="width: 18rem;">
         <img src="images/portfolio.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">My Portfolio</h5>
-          <p class="card-text">My first javascript mini project.<br />Every time you refresh you get a new result</p>
+          <h5 class="card-title">My NewsLetter Website</h5>
+          <p class="card-text">Used heroku to deploy this web app.Designed the web app using html, css, javascript, node js etc.<br /></p>
           <a href="#" class="btn btn-secondary">View</a>
         </div>
       </div>
@@ -105,7 +105,7 @@
 
     <a class="BUTTON_PCR" href="mailto:as09082020@gmail.com">Contact me</a>
 
-    <div class="table-responsive-sm">
+    <div class="table-responsive-sm" id="contact">
 
       <table class="table"align="center" cellpadding="30">
 
