--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="card-body">
               <h5 class="card-title">Dice Game</h5>
               <p class="card-text">My first javascript mini project.<br />Every time you refresh you get a new result</p>
-              <a href="#" class="btn btn-secondary ">View</a>
+              <a href="https://am0908.github.io/Dice-Game/" class="btn btn-secondary ">View</a>
             </div>
           </div>
         </div>
@@ -63,7 +63,7 @@
             <div class="card-body">
               <h5 class="card-title">Drum Kit</h5>
               <p class="card-text">Used html css and javascript to build this wonderful srum kit web app.<br /></p>
-              <a href="#" class="btn btn-secondary ">View</a>
+              <a href="https://am0908.github.io/Drum-Kit/" class="btn btn-secondary ">View</a>
             </div>
           </div>
         </div>
@@ -73,19 +73,20 @@
           <div class="card-body">
             <h5 class="card-title">My Portfolio</h5>
             <p class="card-text">Used html css and bootstrap to design this. I m still working on improving it.</p>
-            <a href="#" class="btn btn-secondary">View</a>
+            <a href="https://am0908.github.io/Myportfolio/" class="btn btn-secondary">View</a>
           </div>
         </div>
       </div>
       <div class="pricing-column col-lg-3 col-md-6">
       <div class="card border-secondary" style="width: 18rem;">
-        <img src="images/portfolio.png" class="card-img-top" alt="...">
+        <img src="images/NewsLetter.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">My NewsLetter Website</h5>
           <p class="card-text">Used heroku to deploy this web app.Designed the web app using html, css, javascript, node js etc.<br /></p>
-          <a href="#" class="btn btn-secondary">View</a>
+          <a href="https://serene-escarpment-28796.herokuapp.com/" class="btn btn-secondary">View</a>
         </div>
       </div>
+
     </div>
       </div>
     </section>
