--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <section id="projects">
       <p class="headings"><u>These are some of my Projects</u></p>
 
-      <div class="row">
-        <div class="pricing-column col-lg-3 col-md-6">
+      <div class="row justify-content-center">
+        <div class="pricing-column col-lg-3 col-md-6 ">
           <div class="card border-secondary" style="width: 18rem;">
             <img src="images/dice.png" class="card-img-top" alt="...">
             <div class="card-body">
