--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <p class="headings"><u>These are some of my Projects</u></p>
 
       <div class="row justify-content-center">
-        <div class="pricing-column col-lg-3 col-md-6 ">
+        <div class="pricing-column col-lg-6  ">
           <div class="card border-secondary" style="width: 18rem;">
             <img src="images/dice.png" class="card-img-top" alt="...">
             <div class="card-body">
@@ -58,17 +58,17 @@
             </div>
           </div>
         </div>
-          <div class="pricing-column col-lg-3 col-md-6">
+          <div class="pricing-column col-lg-6 ">
           <div class="card border-secondary" style="width: 18rem;">
             <img src="images/drum.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Drum Kit</h5>
-              <p class="card-text">Used html css and javascript to build this wonderful srum kit web app.<br /></p>
+              <p class="card-text">Used html css and javascript to build this wonderful drum kit web app.<br /></p>
               <a href="https://am0908.github.io/Drum-Kit/" class="btn btn-secondary ">View</a>
             </div>
           </div>
         </div>
-        <div class="pricing-column col-lg-3 col-md-6">
+        <div class="pricing-column col-lg-6 ">
         <div class="card border-secondary" style="width: 18rem;">
           <img src="images/portfolio.png" class="card-img-top" alt="...">
           <div class="card-body">
@@ -78,7 +78,7 @@
           </div>
         </div>
       </div>
-      <div class="pricing-column col-lg-3 col-md-6">
+      <div class="pricing-column col-lg-6 ">
       <div class="card border-secondary" style="width: 18rem;">
         <img src="images/NewsLetter.png" class="card-img-top" alt="...">
         <div class="card-body">
