--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CoDev</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -48,7 +49,7 @@
       <p class="headings"><u>These are some of my Projects</u></p>
 
       <div class="row justify-content-center">
-        <div class="pricing-column col-lg-6  ">
+        <div class="pricing-column col-lg-3  col-md-6 col-sm-9">
           <div class="card border-secondary" style="width: 18rem;">
             <img src="images/dice.png" class="card-img-top" alt="...">
             <div class="card-body">
@@ -58,7 +59,7 @@
             </div>
           </div>
         </div>
-          <div class="pricing-column col-lg-6 ">
+          <div class="pricing-column col-lg-3 col-md-6 col-sm-9">
           <div class="card border-secondary" style="width: 18rem;">
             <img src="images/drum.png" class="card-img-top" alt="...">
             <div class="card-body">
@@ -68,7 +69,7 @@
             </div>
           </div>
         </div>
-        <div class="pricing-column col-lg-6 ">
+        <div class="pricing-column col-lg-3 col-md-6 col-sm-9">
         <div class="card border-secondary" style="width: 18rem;">
           <img src="images/portfolio.png" class="card-img-top" alt="...">
           <div class="card-body">
@@ -78,7 +79,7 @@
           </div>
         </div>
       </div>
-      <div class="pricing-column col-lg-6 ">
+      <div class="pricing-column col-lg-3 col-md-6 col-sm-9">
       <div class="card border-secondary" style="width: 18rem;">
         <img src="images/NewsLetter.png" class="card-img-top" alt="...">
         <div class="card-body">
