--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
 
     <a class="BUTTON_PCR" href="mailto:as09082020@gmail.com">Contact me</a>
 
-    <div class="table-responsive-sm" id="contact">
+    <div class="table-responsive" id="contact">
 
-      <table class="table "align="center" cellpadding="30">
+      <table class="table table-responsive"align="center" cellpadding="30">
 
         <tr>
           <td>
