--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
     <div class="table-responsive" id="contact">
 
-      <table class="table table-responsive"align="center" cellpadding="30">
+      <table class="table-responsive"align="center" cellpadding="30">
 
         <tr>
           <td>
