--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       </div>
       <div class="pricing-column col-lg-3 col-md-6 col-sm-9">
       <div class="card border-secondary" style="width: 18rem;">
-        <img src="images/NewsLetter.png" class="card-img-top" alt="...">
+        <img src="images/newsLetter.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">My NewsLetter Website</h5>
           <p class="card-text">Used heroku to deploy this web app.Designed the web app using html, css, javascript, node js etc.<br /></p>
