--- a/index.html
+++ b/index.html
@@ -110,25 +110,25 @@
 
     <div id="contact">
 
-      <table class="table-responsive"align="center" cellpadding="30">
+      <table class="table-responsive-lg"align="center" cellpadding="30">
 
         <tr>
-          <th>
+          <td>
 
             <a class="footer-link" href="https://www.linkedin.com/in/amrita-kumari-2401961b6/"><img id="linkedin" src="https://media.giphy.com/media/HQTYdpx1yhxWpugAi2/giphy.gif" alt=""></a>
-          </th>
-          <th>
+          </td>
+          <td>
 
             <a class="footer-link" href="https://twitter.com/Amrita0908"><img id="twitter" src="https://media.giphy.com/media/H508mck9ufO9q6z76O/giphy.gif" alt=""></a>
-          </th>
+          </td>
 
-          <th>
+          <td>
 
             <a class="footer-link" href="https://github.com/Am0908"><img id="git" src="https://media.giphy.com/media/CwTvSiWflgCGKgz5eb/giphy.gif" alt=""></a>
-          </th>
-          <th>
+          </td>
+          <td>
             <a class="footer-link" href="https://www.instagram.com/shreya._.chaubey/"><img id="email" src="https://media.giphy.com/media/eTtXHP8CyQHHa4M8EM/giphy.gif" alt=""></a>
-          </th>
+          </td>
         </tr>
       </table>
   </div>
