--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
     <a class="BUTTON_PCR" href="mailto:as09082020@gmail.com">Contact me</a>
 
-    <div class="table-responsive"  id="contact">
+    <div class="table-responsive table"  id="contact">
 
       <table class="table-responsive-lg"align="center" cellpadding="30">
 
