--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top mobile-offcanvas top-container-fluid">
+  <nav class="navbar navbar-expand-lg navbar-light  fixed-top mobile-offcanvas top-container-fluid" style="background-color:  #FF7272;">
   <a class="navbar-brand " style="font-weight: bold;font-size: x-larger" href="#">CoDev</a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
