--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <p class="headings"><u>These are some of my Projects</u></p>
 
       <div class="row justify-content-center">
-        <div class="pricing-column col-lg-3  col-md-6 col-sm-9">
+        <div class="col-lg-3  col-md-6 col-sm-9">
           <div class="card border-secondary" style="width: 18rem;">
             <img src="images/dice.png" class="card-img-top" alt="...">
             <div class="card-body">
@@ -59,7 +59,7 @@
             </div>
           </div>
         </div>
-          <div class="pricing-column col-lg-3 col-md-6 col-sm-9">
+          <div class="col-lg-3 col-md-6 col-sm-9">
           <div class="card border-secondary" style="width: 18rem;">
             <img src="images/drum.png" class="card-img-top" alt="...">
             <div class="card-body">
@@ -69,7 +69,7 @@
             </div>
           </div>
         </div>
-        <div class="pricing-column col-lg-3 col-md-6 col-sm-9">
+        <div class="col-lg-3 col-md-6 col-sm-9">
         <div class="card border-secondary" style="width: 18rem;">
           <img src="images/portfolio.png" class="card-img-top" alt="...">
           <div class="card-body">
@@ -79,7 +79,7 @@
           </div>
         </div>
       </div>
-      <div class="pricing-column col-lg-3 col-md-6 col-sm-9">
+      <div class="col-lg-3 col-md-6 col-sm-9">
       <div class="card border-secondary" style="width: 18rem;">
         <img src="images/newsletter.png" class="card-img-top" alt="...">
         <div class="card-body">
