--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section id="projects">
       <p class="headings"><u>These are some of my Projects</u></p>
 
-      <div class="row justify-content-center">
+      <div class="row">
         <div class="col-lg-3  col-md-6 col-sm-9">
           <div class="card border-secondary" style="width: 18rem;">
             <img src="images/dice.png" class="card-img-top" alt="...">
