--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
       <div class="row">
         <div class="col-lg-3  col-md-6 col-sm-9">
-          <div class="card border-secondary" style="width: 18rem;">
+          <div class="card border-secondary mx-auto" style="width: 18rem;">
             <img src="images/dice.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Dice Game</h5>
@@ -60,7 +60,7 @@
           </div>
         </div>
           <div class="col-lg-3 col-md-6 col-sm-9">
-          <div class="card border-secondary" style="width: 18rem;">
+          <div class="card border-secondary mx-auto" style="width: 18rem;">
             <img src="images/drum.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Drum Kit</h5>
@@ -70,7 +70,7 @@
           </div>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-9">
-        <div class="card border-secondary" style="width: 18rem;">
+        <div class="card border-secondary mx-auto" style="width: 18rem;">
           <img src="images/portfolio.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">My Portfolio</h5>
@@ -80,7 +80,7 @@
         </div>
       </div>
       <div class="col-lg-3 col-md-6 col-sm-9">
-      <div class="card border-secondary" style="width: 18rem;">
+      <div class="card border-secondary mx-auto" style="width: 18rem;">
         <img src="images/newsletter.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">My NewsLetter Website</h5>
