--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CoDev</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Charmonman&family=Licorice&display=swap" rel="stylesheet">
@@ -15,7 +16,7 @@
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-light  fixed-top mobile-offcanvas top-container-fluid" style="background-color:  #FF7272;">
-  <a class="navbar-brand " style="font-weight: bold;font-size: x-larger" href="#">CoDev</a>
+  <a class="navbar-brand " style="font-weight: bold;font-size: x-larger" href="#home">CoDev</a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
