--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>CoDev</title>
+  <title>MyPortfolio</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +16,7 @@
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-light  fixed-top mobile-offcanvas top-container-fluid" style="background-color:  #FF7272;">
-  <a class="navbar-brand " style="font-weight: bold;font-size: x-larger" href="#home">CoDev</a>
+  <a class="navbar-brand " style="font-weight: bold;font-size: x-larger" href="#home">Portfolio</a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
