--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 </head>
 
 <body>
-
   <nav class="navbar navbar-expand-lg navbar-light  fixed-top mobile-offcanvas top-container-fluid" style="background-color:  #FF7272;">
   <a class="navbar-brand " style="font-weight: bold;font-size: x-larger" href="#home">Portfolio</a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,12 +37,27 @@
   </div>
 </nav>
   <div class="top-container" id="home">
+  <div class="row toprow">
+    <div class="col-lg-6">
+      <p class="div1top">
+        Hey! I am Amrita
+      </p>
+      <p class="div1sec">
+        A Web <u>Developer</u>
+      </p>
+    </div>
+    <div class="col-sm">
+      <img src="gif1.gif" alt="" style="width:700px">
+    </div>
+  </div>
+<!--
     <p class="div1top">
       Hey! I am Amrita
     </p>
     <p class="div1sec">
       A Web <u>Developer</u>
     </p>
+    <img src="gif1.gif" alt=""> -->
   </div>
   <div class="middle-container">
     <section id="projects">
@@ -97,6 +111,7 @@
   </div>
   <div class="bottom-container">
     <p class="contact"><u>Let's Get in Touch</u></p>
+
     <!-- <form action="mailto:as09082020@gmail.com" class="feedback" action="index.html" method="post">
       <label for="name">Name</label><br />
       <input type="text" name="name" id="name"><br /><br />
