--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </nav>
   <div class="top-container" id="home">
   <div class="row toprow">
-    <div class="col-lg-6">
+    <div class="col-lg-6 mx-auto">
       <p class="div1top">
         Hey! I am Amrita
       </p>
@@ -46,8 +46,8 @@
         A Web <u>Developer</u>
       </p>
     </div>
-    <div class="col-sm">
-      <img src="gif1.gif" alt="" style="width:700px">
+    <div class="col-lg-6 mx-auto">
+      <img src="gif1.gif" alt="" style="width:100%">
     </div>
   </div>
 <!--
