--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </div>
 </nav>
   <div class="top-container" id="home">
-  <div class="row toprow">
+  <div class="row toprow" style="width:100%">
     <div class="col-lg-6 mx-auto">
       <p class="div1top">
         Hey! I am Amrita
